data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1798.wast
;; 9. **Test Description**: A `try`-`catch` block nested within a `block`, leveraging `br` to target the `catch` section.    **Reasoning**: Verifies correct label resolution in the context of exception handling and nested control flow constructs.

(assert_invalid
  (module
    (type $t (func (result i32)))
    (func (result i32)
      (block (result i32)
        (try (result i32)
          (br 0)
        (catch
          (i32.const 1)
        ))
      )
    )
  )
  "type mismatch"
)